# private-sre-agent

./: README.md  pyproject.toml
samples/: deploy.yaml  error-pod.yaml  sre-agent.yaml.example
sre_agent/: cli.py  config.py
sre_agent/agent/: loop.py  tools.py
sre_agent/analyzers/: advice.py  deployment.py  events.py  log_patterns.py  pod_state.py
sre_agent/collectors/: kubernetes.py
sre_agent/commands/: analyze.py  config_cmd.py  deploy.py  inspect.py  klogs.py
sre_agent/harness/: command_runner.py  redactor.py
sre_agent/llm/: ollama.py  openai_provider.py  prompts.py  providers.py
sre_agent/llm/providers/: __init__.py  anthropic_provider.py  base.py  ollama.py  openai_compat.py  openai_provider.py
sre_agent/render/: llm_runner.py  rich_renderer.py
sre_agent/report/: diagnosis.py
tests/: test_diagnosis.py  test_log_patterns.py  test_redactor.py
