[project]
name = "private-sre-agent"
version = "0.1.0"
description = "Private SRE CLI agent for Kubernetes log analysis"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.0",
  "rich>=13.0.0",
  "requests>=2.31.0",
  "openai>=1.0.0",
  "anthropic>=0.25.0",
  "pyyaml>=6.0",
]

[project.scripts]
sre-agent = "sre_agent.cli:app"

[tool.setuptools.packages.find]
include = ["sre_agent*"]
exclude = ["samples*", "tests*"]

[tool.pytest.ini_options]
pythonpath = ["."]